# SynapseLink

./: .gitignore  6.4.0  CONTRIBUTING.md  LICENSE  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: USER_MANUAL.md
src/: __init__.py  main.py
src/core/: __init__.py  automation_manager.py  config.py  data_processor.py  protocol_analyzer.py  security_manager.py  serial_manager.py  session_manager.py
src/resources/: compile_resources.py  download_icons.py  resources.qrc
src/ui/: __init__.py  auth_dialog.py  automation_view.py  connection_dialog.py  connection_tab.py  main_window.py  protocol_view.py  search_filter_dialog.py  security_dialog.py  splash_screen.py  tab_selection_dialog.py  visualization_widget.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py  test_serial_manager.py
